# card_aki

./: IMPORTANT_CHANGES.md  README.md  cards_CRD_1076.csv  pyproject.toml
.github/workflows/: update_cards.yml
app/: constants.py  question_bank.py  scoring.py  state.py  streamlit_app.py  ui.py
crawler/: build_card_db.py  card.py
data/: cards.db  cards_snapshot.json
docs/: BEGINNER_IMPLEMENTATION_GUIDE.md  DB_FILTER_METRICS.md  NOTION_INTEGRATION_PLAN.md
