[project]
name = "card-akinator-streamlit"
version = "0.1.0"
description = "Streamlit prototype with card crawler and sqlite DB"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.40.0",
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0",
]

[tool.uv]
package = false
